@@ -17,7 +17,7 @@
  * See the file "license.terms" for information on usage and redistribution
  * of this file, and for a DISCLAIMER OF ALL WARRANTIES.
  *
- * RCS: @(#) $Id: tclIOUtil.c,v 1.77.2.13 2003/12/17 09:32:35 vasiljevic Exp $
+ * RCS: @(#) $Id: tclIOUtil.c,v 1.77.2.14 2004/01/09 13:19:42 vincentdarley Exp $
  */
 
 #include "tclInt.h"
@@ -714,7 +714,7 @@ FsUpdateCwd(cwdObj)
 void
 TclFinalizeFilesystem()
 {
-    FilesystemRecord *fsRecPtr, *tmpFsRecPtr;
+    FilesystemRecord *fsRecPtr;
 
     /* 
      * Assumption that only one thread is active now.  Otherwise
@@ -734,7 +734,7 @@ TclFinalizeFilesystem()
 
     fsRecPtr = filesystemList;
     while (fsRecPtr != NULL) {
-	tmpFsRecPtr = filesystemList->nextPtr;
+	FilesystemRecord *tmpFsRecPtr = fsRecPtr->nextPtr;
 	if (fsRecPtr->fileRefCount <= 0) {
 	    /* The native filesystem is static, so we don't free it */
 	    if (fsRecPtr != &nativeFilesystemRecord) {
